# phd

./: README.md
ascend_cl/: CMakeLists.txt
ascend_cl/database/adas_graph_config/: test_config.txt
ascend_cl/database/arrival_configs/: fgfs_arrival_instances.txt  squeezenet_arrival.txt  (+9 more)
ascend_cl/frontend/: .generate_fusion_profiles_new.py.swp  .generate_kernel_json.py.swp  arrival.txt  cnn.py  create_transformer.py  create_transformer_dag.py  create_transformer_dag_vectorized.py  dag.graph  fgfs_arrival.txt  fgfs_arrival_instances.txt  generate_arrival_pattern.py  generate_execute_kernel_scripts.py  generate_fusion_profiles.py  generate_fusion_profiles_numplate.py  generate_kernel_json.py  generate_online_dags.py  generate_raw_json.py  parse_final_timing.py  profile_dag.py  profile_kernel.py
ascend_cl/include/: Allocator.h  Buffer.h  DAG.h  Events.h  FreeTreeAllocator.h  GpuBufferManager.h  HostArray.h  Kernel.h  KernelArgument.h  RBTree.h  ScheduleEngine.h  core.h
ascend_cl/lib/: Buffer.cpp  CMakeLists.txt  DAG.cpp  Events.cpp  FreeTreeAllocator.cpp  GpuBufferManager.cpp  HostArray.cpp  Kernel.cpp  KernelArgument.cpp  RBTree.cpp  ScheduleEngine.cpp  core.cpp
ascend_cl/scheduling/: CMakeLists.txt
ascend_cl/scripts/: copy_configurations.sh  copy_results.sh  debug_cpu.txt  debug_e64_cpu.txt  debug_e64_cpu_times.txt  debug_e64_gpu.txt  debug_e64_gpu_times.txt  debug_gpu.txt  e64_profiles_cpu.txt  e64_profiles_gpu.txt  edlenet_baseline_interference.sh  edlenet_interference.sh  edlenet_normal.sh  execute_kernels.sh  generate_profile_cnn_script.py  run_profiling.sh  sample_fused_configurations.txt  test_config_cpu.txt  test_low_level_scheduler.sh  yololite_baseline_interference.sh  yololite_interference.sh  yololite_normal.sh
ascend_cl/tests/: CMakeLists.txt
(+130270 files in other folders)
