cmake_minimum_required(VERSION 2.8.12.2)
if (${WIN32})
  message ("Build on Windows not (yet) supported.")
endif (${WIN32})
set(CMAKE_C_COMPILER /usr/bin/gcc)
set(CMAKE_CXX_COMPILER /usr/bin/g++)
project(ascend)
set(CMAKE_BUILD_TYPE Release)
set(OPENCL_INCLUDE "/usr/include/CL_1_2/")
set (ASCEND_INCLUDE_DIR ${OPENCL_INCLUDE} "${PROJECT_SOURCE_DIR}/include" )
set (ASCEND_LIB_DIR "${PROJECT_BINARY_DIR}/lib")
message("Include directory ${ASCEND_INCLUDE_DIR}")
message("Lib directory ${ASCEND_LIB_DIR}")
add_subdirectory (lib)
add_subdirectory (tests)
add_subdirectory (scheduling)

