add_subdirectory(schedule_engine)
add_subdirectory(dag_tests)
add_subdirectory(rank_tests)
add_subdirectory(taskdag_tests)
add_subdirectory(list_schedule)
add_subdirectory(dispatch_kernel_callback)
add_subdirectory(profile_task_components)
add_subdirectory(adas_scheduler)
add_subdirectory(sim_scheduler)
